:green_heart: Usage of features from wrong Java version now checked